--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ commands =
     codecov
 
 [testenv:flake8]
-commands = flake8 src/ unit_tests/ script_tests/
+commands = flake8 src/ tests/
 deps =
     flake8
     pep8-naming
