--- a/docker-highres-cortex-ants/Dockerfile
+++ b/docker-highres-cortex-ants/Dockerfile
@@ -1,4 +1,4 @@
-FROM highres-cortex:latest
+FROM ylep/highres-cortex:latest
 
 COPY ANTs-2.2.0/bin/antsRegistration /usr/local/bin/
 COPY ANTs-2.2.0/bin/antsApplyTransforms /usr/local/bin/
