--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,12 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py35, py36, py37, flake8, docs, cov
+envlist = py35, py36, py37, codestyle, docs, cov
 
 [travis]
 # NOTE: remember to update the list of Python versions in .travis.yml
 python =
-  3.5: py35, flake8
+  3.5: py35, codestyle
   3.6: py36, traviscodecov
   3.7: py37
 
@@ -40,11 +40,10 @@ commands =
     {[testenv:cov]commands}
     codecov
 
-[testenv:flake8]
-commands = flake8 src/ tests/
+[testenv:codestyle]
+commands = pre-commit run --all-files
 deps =
-    flake8
-    pep8-naming
+    pre-commit
 
 [flake8]
 ignore =
@@ -54,5 +53,5 @@ ignore =
     E121, E126, E226, E133, E203, E241,
     # We want line-break *before* the operator (new PEP8 style similar to math)
     W503,
-    # Gives false positives when a name contains an uppercase acronym
-    N802
+    # Give false positives when a name contains an uppercase acronym
+    N802, N806
