--- a/Dockerfile.celery
+++ b/Dockerfile.celery
@@ -13,6 +13,9 @@ RUN apt-get update \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
+# Upgrade pip as recommended
+RUN python3 -m pip install --no-cache-dir --upgrade pip
+
 COPY . /source
 RUN python3 -m pip install --no-cache-dir /source
 
