--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
+sudo: false
 language: python
-# The next two lines are here to fix build with Pyton 3.7, see
-# https://github.com/travis-ci/travis-ci/issues/9069#issuecomment-425720905
-sudo: required
-dist: xenial
+dist: xenial  # required for Python >= 3.7
 python:
   - "3.5"
   - "3.6"
   - "3.7"
+  - "3.8"
+
 install: pip install tox-travis
 script: tox
