--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py35, py36, py37, codestyle, docs, cov
+envlist = py35, py36, py37, py38, codestyle, docs, cov
 
 [travis]
 # NOTE: remember to update the list of Python versions in .travis.yml
@@ -12,6 +12,7 @@ python =
   3.5: py35, codestyle
   3.6: py36, traviscodecov
   3.7: py37
+  3.8: py38
 
 [testenv]
 commands = pytest {posargs}
