--- a/openshift-deployment/openshift-dev-export.yaml
+++ b/openshift-deployment/openshift-dev-export.yaml
@@ -514,7 +514,7 @@ items:
       import os
       CELERY_BROKER_URL = 'redis://:' + os.environ['REDIS_PASSWORD'] + '@redis:6379/0'
       CELERY_RESULT_BACKEND = CELERY_BROKER_URL
-      CORS_ORIGINS = r'https://voluba(-dev)?\.apps(-dev)?\.hbp\.eu'
+      CORS_ORIGINS = r'https://.*\.(hbp\.eu|humanbrainproject\.eu|humanbrainproject\.org)'
       PROXY_FIX = {
           'x_for': 1,
           'x_host': 1,
